=== master

* Fix :qualify_tables option to class_table_inheritance plugin to work correctly with subclasses of subclasses (benalavi) (#1581)

* Make class_table_inheritance plugin use the schema cache instead of sending a query to get columns for tables (kenaniah) (#1580)

* Remove loading of mysqlplus in the mysql adapter (jeremyevans)

* Make mysql adapter work correctly on ruby 2.6+ (jeremyevans)

* Add Database#rollback_on_exit to rollback transactions instead of committing them when exiting the transaction block (jeremyevans)

* Enable window functions in SQLite 3.26.0+ (jeremyevans)

* Do not override existing methods when creating Sequel::Model attribute getter/setter methods (jeremyevans) (#1578)

* Use parentheses for expressions being subscripted (e.g. (array_agg(column))[1]) (jeremyevans)

=== 5.15.0 (2018-12-01)

* Add :conn_str option in the postgres adapter for PostgreSQL connection strings, if the pg driver is used (graywolf) (#1572)

* Add :qualify_tables option to class_table_inheritance plugin to automatically qualify subclass tables with superclass qualifier (benalavi) (#1571)

* Access already allocated connections in a thread safe manner when checking out connections in the sharded threaded connection pool (jeremyevans)

* Automatically support datasets using qualified tables in the class_table_inheritance plugin without having to use the :alias option (benalavi) (#1565)

* Support rename_column without emulation on SQLite 3.25+ (jeremyevans)

* Do not remove currently cached many_to_one associated objects when changing the related foreign key value from nil to non-nil (jeremyevans)

* Do not validate new *_to_many associated objects twice when saving in the nested_attributes plugin (jeremyevans)

* Add Model#skip_validation_on_next_save! for skipping validation on next save call (jeremyevans)

=== 5.14.0 (2018-11-01)
