@@ -510,6 +510,25 @@ describe "NestedAttributes plugin" do
       ["INSERT INTO albums (artist_id, name) VALUES (1, 'Al')", "INSERT INTO albums (name, artist_id) VALUES ('Al', 1)"])
   end
   
+  it "should not attempt to validate nested attributes twice for one_to_one associations when creating them" do
+    @Artist.nested_attributes :first_album
+    validated = []
+    @Album.class_eval do
+      define_method(:validate) do
+        super()
+        validated << self
+      end
+    end
+    a = @Artist.new(:name=>'Ar', :first_album_attributes=>{:name=>'Al'})
+    @db.sqls.must_equal []
+    validated.length.must_equal 0
+    a.save
+    validated.length.must_equal 1
+    check_sql_array("INSERT INTO artists (name) VALUES ('Ar')",
+      "UPDATE albums SET artist_id = NULL WHERE (artist_id = 1)",
+      "INSERT INTO albums (name, artist_id) VALUES ('Al', 1)")
+  end
+  
   it "should not save if nested attribute is not valid and should include nested attribute validation errors in the main object's validation errors" do
     @Artist.class_eval do
       def validate
